--- a/yggdrasil/Dockerfile
+++ b/yggdrasil/Dockerfile
@@ -8,7 +8,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 ENV LANG=C.UTF-8
 
 #Installl yggdrasil 
-RUN apk update && apk add --no-cache --no-commit-hook bash yggdrasil && rm -rf /var/cache/apk/*
+RUN apk update && apk add --no-cache --no-scripts bash yggdrasil && rm -rf /var/cache/apk/*
 
 COPY run.sh /
 RUN chmod a+x / run.sh
